fix the add-on on firefox

--- a/src/css/cockpit.css
+++ b/src/css/cockpit.css
@@ -37,7 +37,7 @@ body {
 }
 
 .stats > div > div {
-    padding: 10px;
+    padding: 8px;
 }
 
 .stat {
